--- a/Info.plist
+++ b/Info.plist
@@ -5,11 +5,11 @@
     <key>CFBundleDevelopmentRegion</key>
     <string>en</string>
     <key>CFBundleExecutable</key>
-    <string>SleepingCatApp</string>
+    <string>SleepingCat</string>
     <key>CFBundleIconFile</key>
     <string>SleepingCat</string>
     <key>CFBundleIdentifier</key>
-    <string>com.yourname.SleepingCatApp</string>
+    <string>com.yourname.SleepingCat</string>
     <key>CFBundleInfoDictionaryVersion</key>
     <string>6.0</string>
     <key>CFBundleName</key>
