Configure Windows installer to build for both x64 and ARM64

--- a/windows/package.json
+++ b/windows/package.json
@@ -21,7 +21,12 @@
       "output": "dist"
     },
     "win": {
-      "target": "nsis",
+      "target": [
+        {
+          "target": "nsis",
+          "arch": ["x64", "arm64"]
+        }
+      ],
       "icon": "icon.ico"
     },
     "mac": {
